--- a/SW05/Exercise5.html
+++ b/SW05/Exercise5.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="webgl-debug.js"></script>
     <script type="text/javascript" src="shaderUtils.js"></script>
     <script type="text/javascript" src="gl-matrix.js"></script>
-    <script type="text/javascript" src="wireFrameCubeEmpty.js"></script>
-    <script type="text/javascript" src="Exercise4.js"></script>
+    <script type="text/javascript" src="ColorCube.js"></script>
+    <script type="text/javascript" src="Exercise5.js"></script>
 </head>
 <body>
 <h1>Wire Frame Cube</h1>
