Exercise 6 completed with texture

--- a/SW08/Exercise6.html
+++ b/SW08/Exercise6.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Wire Frame Cube</title>
+    <title>Computer Graphics</title>
     <script type="text/javascript" src="webgl-debug.js"></script>
     <script type="text/javascript" src="shaderUtils.js"></script>
     <script type="text/javascript" src="gl-matrix.js"></script>
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="wireFrameCube.js"></script>
 </head>
 <body>
-<h1>Wire Frame Cube</h1>
+<h1>Exercise6 - Matthias Egli</h1>
 <canvas id="myCanvas" width="800" height="600"></canvas>
 </body>
 </html>
